--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    color: rgb(var(--foreground-rgb));
+    background: #1b2429;
+  }
+}
+
+@layer components {
+  .link {
+    @apply text-base hover:underline-offset-4 hover:underline hover:decoration-white;
+  }
+  .button {
+    @apply px-4 py-1 rounded-md min-w-[128px] h-10 cursor-pointer hover:bg-gray-900;
+  }
+  .button-primary {
+    @apply button bg-cmc-blue text-cmc-bg hover:bg-cyan-700 hover:text-cyan-100;
+  }
+  .button-ghost {
+    @apply button border-[1px] bg-cmc-bg border-white text-white;
+  }
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -14,14 +36,4 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
